--- a/config.properties
+++ b/config.properties
@@ -1,1 +1,7 @@
 platformName = Android
+deviceName = Pixel 2
+automationName = UiAnimator2
+androidVersion = 10.0
+appPackage = a
+appActivity = b
+apkFile = /Users/banuyurdakul/Desktop/com.Kariyer_Net_Android/apps/com-kariyer-androidproject-209-66338468-9bd494dd5110b423a03dd4da8274a05f.apk
