--- a/config.properties
+++ b/config.properties
@@ -2,6 +2,10 @@ platformName = Android
 deviceName = Pixel 2
 automationName = UiAnimator2
 androidVersion = 10.0
-appPackage = a
+appPackage = com.kariyer.androidproject
 appActivity = b
+validUsername = banuyurdakulqa@gmail.com
+validPassword = Password1357
+invalidUsername = username
+invalidPassword = password
 apkFile = /Users/banuyurdakul/Desktop/com.Kariyer_Net_Android/apps/com-kariyer-androidproject-209-66338468-9bd494dd5110b423a03dd4da8274a05f.apk
