--- a/config.properties
+++ b/config.properties
@@ -3,7 +3,7 @@ deviceName = Pixel 2
 automationName = UiAnimator2
 androidVersion = 10.0
 appPackage = com.kariyer.androidproject
-appActivity = b
+appActivity = com.kariyer.androidproject.ui.login.LoginActivity
 validUsername = banuyurdakulqa@gmail.com
 validPassword = Password1357
 invalidUsername = username
