--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>com.Kariyer_Net_Android</artifactId>
+    <artifactId>Kariyer_Net_Android-old</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
