fixes and readme

--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
 platformName = Android
 deviceName = Pixel 2
-automationName = UiAnimator2
+automationName = UiAutomator2
 androidVersion = 10.0
 appPackage = com.kariyer.androidproject
 appActivity = com.kariyer.androidproject.ui.login.LoginActivity
